# TalesFromTheSprawl

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  alembic.ini  compose.yml  config.toml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
discord/: __main__.py  actors.py  admin.py  artifacts.py  channels.py  chats.py  clear_confs.py  common.py  common_channels.py  constants.py  custom_types.py  finances.py  game.py  gm.py  groups.py  handles.py  impersonator.py  known_handles.conf  logger.py  player_setup.py  players.py  posting.py  reactions.py  requirements.txt  scenarios.py  server.py  shops.py  stores.py  system_bot.py  testBot.py
discord/actors/: .readme
discord/artifacts/: __artifacts.conf
discord/chats/: chats.conf
discord/conf_backup/: channel_states.conf  handles.conf  stats.conf
discord/ext/: impersonator.py
discord/prepare/: known_handles.conf  source.csv
discord/scenarios/: crash.conf
scripts/: import_csv.py
src/alembic/versions/: 178d0c57672f_create_artifact_table.py
src/scripts/: db_test.py  import_csv.py  unclaimed.py
src/talesbot/: __init__.py  __main__.py  actors.py  admin.py  api.py  artifacts.py  bot.py  broadcaster.py  channels.py  chats.py  checks.py  clear_confs.py  common.py  config.py  custom_types.py  db.py  errors.py  finances.py  game.py  gm.py  groups.py  handles.py  impersonator.py  logger.py  permissions.py  player_setup.py  players.py  posting.py  reactions.py  scenarios.py  server.py  shops.py  system_bot.py  utils.py
src/talesbot/access/: actor.py  artifact.py  group.py  player.py  transaction.py
src/talesbot/cogs/: admin.py  artifact.py  artifacts.py  shop.py
src/talesbot/conf/: __init__.py  checks.py  models.py
src/talesbot/config/: __init__.py  channels.py  checks.py  impersonator.py  known_handles.py  roles.py
src/talesbot/core/: artifact.py  player.py  transaction.py
src/talesbot/core/database/: models.py
src/talesbot/data/: __init__.py  schema.py
src/talesbot/data/access/: actor.py  artifact.py  player.py  sequence.py
src/talesbot/database/: __init__.py  artifact.py  models.py  transaction.py
src/talesbot/ext/: admin.py  artifacts.py  chat.py  finance.py  gm.py  group.py  player.py  register.py
src/talesbot/exts/: admin.py  chats.py  player.py
src/talesbot/prepare/: create_confs.py
src/talesbot/ui/: artifact.py  chat.py  register.py  test_view.py
talesbot/: __main__.py  actors.py  admin.py  artifacts.py  channels.py  chats.py  common.py  config.py  db.py  finances.py  game.py  gm.py  groups.py  handles.py  impersonator.py  logger.py  players.py  posting.py  reactions.py  scenarios.py  shops.py  system_bot.py
talesbot/conf/: __init__.py  models.py
talesbot/conf/checks/: __init__.py  base.py  channels.py
talesbot/db/: __init__.py  tables.py
talesbot/exts/: admin.py  chats.py
