[project]
name = "talesbot"
version = "1.0.0"
description = "Discord bot for Tales from the Sprawl"
authors = [{ name = "Carl Malmgren", email = "callem217@gmail.com" }]
dependencies = [
    "discord-py>=2.4.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "configobj>=5.0.8",
    "peewee>=3.17.6",
    "types-peewee>=3.17.6.20240722",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"talesbot" = "talesbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/talesbot"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
docstring-code-format = true

#[tool.poetry]
#name = "talesfromthesprawl"
#version = "0.1.0"
#description = ""
#authors = ["Carl Malmz <callem217@gmail.com>"]
#readme = "README.md"
#packages = [{ include = "talesbot" }]
#
#[tool.poetry.dependencies]
#python = "^3.11"
#python-dotenv = "^1.0.0"
#configobj = "^5.0.8"
#simplejson = "^3.19.1"
#discord-py = "^2.3.2"
#emoji = "^2.8.0"
#
#
#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
