[project]
name = "talesbot"
version = "1.0.0"
description = "Discord bot for Tales from the Sprawl"
authors = [{ name = "Carl Malmgren", email = "callem217@gmail.com" }]
dependencies = [
    "discord-py>=2.4.0",
    "python-dotenv>=1.0.0",
    "configobj>=5.0.8",
    "simplejson>=3.19.1",
    "emoji>=2.14.0",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "uvloop>=0.21.0",
    "click>=8.1.7",
    "tabulate>=0.9.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.3",
    "audioop-lts>=0.2.1",
    "asyncpg>=0.30.0",
]
readme = "README.md"
requires-python = ">= 3.13"

[project.scripts]
"talesbot" = "talesbot:main"
"import" = "scripts.import_csv:main"
"unclaimed" = "scripts.unclaimed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportOptionalMemberAccess = "information"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
docstring-code-format = true
